@@ -312,12 +312,6 @@ void Actor::unready_weapon
  *
  *	Output:	0 if not on screen.
  */
-#if !(defined(BEOS) || defined(ALPHA_LINUX_CXX))
-#if __GNUG__ > 2
-#else
-inline 
-#endif
-#endif
 int Actor::add_dirty
 	(
 	Game_window *gwin,
