@@ -1,3 +1,8 @@
+2002-05-23  Max Horn  <max@quendi.de>
+
+	* actors.cc, audio/xmidi.cc: added missing std::
+	* databuf.h: changed some occurances of unsigned int to uint32
+
 2002-05-22  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
 
 	* usecode/compiler/ucparse.yy: Added (primitive) enum support.
